tests/types/errors/on_unknown_stream.mochi
on Foo as e {
  print("hi")
}
